# MMSnake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: .clang-format  .clang-tidy  CMakeLists.txt  app.cpp  app.h  game.cpp  game.h  main.cpp  pch.h  renderer.cpp  renderer.h  screen.cpp  screen.h  window.cpp  window.h
src/assets/shaders/basic/: basic.frag.glsl
src/assets/shaders/line/: line.frag.glsl  line.vert.glsl
src/core/: assert.h  debug_break.h  macros.h  sleeper.h  sleeper_unix.cpp  sleeper_unix.h  sleeper_windows.cpp  sleeper_windows.h
src/events/: event.h  mouse_button_event.h  mouse_event.cpp  mouse_event.h  window_size_event.cpp  window_size_event.h
src/game/: game.cpp  game.h  stick_figure.h
src/geometric/: matrix.hpp  point.hpp  rect.hpp  size.hpp
src/renderer/: line_quad.cpp  line_quad.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/utility/: concepts.hpp  file_path.h  float_to_uint8.h  log.hpp  point.hpp  rect.hpp  size.hpp  timer.cpp  timer.h  tracer.cpp  tracer.h  vec.hpp
